version: "0.6.0"
opam-version: "2.0"
maintainer:   "Sai Venkata Krishnan V <saiganesha5.svkv@gmail.com>"
homepage:     "https://github.com/mirage/mirage-bootvar-solo5"
bug-reports:  "https://github.com/mirage/mirage-bootvar-solo5/issues/"
dev-repo:     "git+https://github.com/mirage/mirage-bootvar-solo5.git"
license:      "ISC"
authors: [
  "Dan Williams <djwillia@us.ibm.com>"
  "Magnus Skjegstad <magnus@skjegstad.com>"
  "Martin Lucina <martin@lucina.net>"
]
tags: [
  "org:mirage"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-x" "riscv" "-p" "mirage-bootvar-riscv" "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "ocaml-riscv" {>= "4.04.2"}
  "dune" {build & >= "1.0"}
  "mirage-riscv-riscv" {>= "0.6.0" & < "0.7.0"}
  "lwt-riscv"
  "parse-argv-riscv"
]
synopsis: "RiscV implementation of MirageOS Bootvar interface"